tests/fixtures/errors/reassign_lock_field.z
# E0200: a .lock field is set at construction and cannot be reassigned.
thing: class { v: String }
holder: class {
    item: thing.lock
} as {
    create: function {item: thing.lock} out this is {
        return (meta.create item: item)
    }
}
g: function {h: holder x: thing} is {
    h.item = x.lock
}
main: function is {
    t: thing v: "z".string
    hl: holder item: t.lock
}
